2006-08-21  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge.7.in: Updated description.

	* QUICKSTART: Updated.

2006-08-20  Chris Dunlap  <cdunlap@llnl.gov>

	* QUICKSTART: Updated.

	* README, munge.spec: Updated description.

2006-08-16  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

2006-08-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Tweaked spacing.

	* src/etc/munge.init.in(service_restart): Changed so start would not
	  be attempted if preceding stop had failed.

	* src/etc/munge.init.in(service_start,service_stop): Replaced Debian's
	  "--oknodo" with test for "$0 status" since --oknodo would also mask
	  errors such as "operation not permitted".

	* Makefile.am: Replaced distclean-local target with DISTCLEANFILES.

	* src/etc/Makefile.am: Added munge.init to noinst_DATA, thereby adding
	  its dependency to the "all" target.

	* src/libcommon/log.c(_log_prefix): Changed priority prefixes to
	  mixed-case strings.

	* README, munge.spec: Updated description.

2006-07-27  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Changed the test for starting a service on
	  RedHat to mirror the test for stopping a service there.

	* src/libcommon/log.c(_log_die): Changed behavior to only return error
	  message across "daemonize" pipe if the logging fp is not set to
	  stderr in order to avoid having the message written to stderr first
	  by the grandchild process and again by the original parent process.

	* src/etc/munge.init.in: Changed behavior to capture stderr on start
	  and output it on error.
	* src/etc/munge.init.in: Changed behavior on RedHat to not return an
	  error when stopping a service that is already stopped.

2006-07-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c(main): Moved daemonize_fini() to just before
	  job_accept() in order to return more fatal error conditions to shell.
	* src/munged/munged.c(daemonize_init): Changed behavior for original