@@ -1,4 +1,28 @@
+.\"****************************************************************************
 .\" $Id$
+.\"****************************************************************************
+.\" Copyright (C) 2002-2006 The Regents of the University of California.
+.\" Produced at Lawrence Livermore National Laboratory.
+.\" Written by Chris Dunlap <cdunlap@llnl.gov>.
+.\" UCRL-CODE-155910.
+.\"
+.\" This file is part of the MUNGE Uid 'N' Gid Emporium (MUNGE).
+.\" For details, see <http://home.gna.org/munge/>.
+.\"
+.\" This is free software; you can redistribute it and/or modify it
+.\" under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 2 of the License, or
+.\" (at your option) any later version.
+.\"
+.\" This is distributed in the hope that it will be useful, but WITHOUT
+.\" ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+.\" FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+.\" for more details.
+.\"
+.\" You should have received a copy of the GNU General Public License along
+.\" with this program; if not, write to the Free Software Foundation, Inc.,
+.\" 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA.
+.\"****************************************************************************
 
 .TH MUNGE_ENUM 3 "@META_DATE@" "@META_ALIAS@" "MUNGE Uid 'N' Gid Emporium"
 
@@ -9,13 +33,13 @@ munge_enum_is_valid, munge_enum_int_to_str, munge_enum_str_to_int \- MUNGE enume
 .nf
 .B #define GPL_LICENSED 1
 .B #include <munge.h>
-.PP
+.sp
 .BI "int munge_enum_is_valid (munge_enum_t " type ", int " val );
-.PP
+.sp
 .BI "const char * munge_enum_int_to_str (munge_enum_t " type ", int " val );
-.PP
+.sp
 .BI "int munge_enum_str_to_int (munge_enum_t " type ", const char *" str );
-.PP
+.sp
 .B cc ... -lmunge
 .fi
 
@@ -64,18 +88,18 @@ types can be queried.
 .PP
 .nf
 #define GPL_LICENSED 1
-
+.sp
 #include <stdio.h>                      /* for printf() */
 #include <stdlib.h>                     /* for exit() */
 #include <munge.h>
-
+.sp
 int
 main (int argc, char *argv[])
 {
     int           i;
     const char   *p;
     munge_enum_t  t = MUNGE_ENUM_CIPHER;
-
+.sp
     for (i = 0; (p = munge_enum_int_to_str (t, i)) != NULL; i++) {
         if (munge_enum_is_valid (t, i)) {
             printf ("%2d = %s\\n", i, p);
